Maybe fix double-scrollbars on ios V

--- a/app/posts/[slug]/page.module.css
+++ b/app/posts/[slug]/page.module.css
@@ -135,7 +135,7 @@
     box-sizing: content-box;
     display: block;
     margin: 0 auto;
-    overflow: visible;
+    width: max-content;
     font-size: 0.88rem;
     border-radius: 6px;
   }
